--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,9 @@
 {
-    "extends": [
-        "plugin:react/recommended",
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ]
+  "extends": ["plugin:react/recommended", "standard"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+
+  "plugins": ["react"]
 }
